fix face on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ img {
 
 .home {
     max-width: 100%;
-    min-width: 600px;
+    min-width: 400px;
     background-size:cover 
 }
 
